--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Portfolio - Nestor Jacinto</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="margin: 0; padding: 0; width: 100%; height: 100%;">
+    <div id="root" style="width: 100%; height: 100%;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
